examples/manual/proguide/errors/err.bas
'' examples/manual/proguide/errors/err.bas
''
'' Example extracted from the FreeBASIC Manual
'' from topic 'Error Handling'
''
'' See Also: https://www.freebasic.net/wiki/wikka.php?wakka=ProPgErrorHandling
'' --------

Dim As Integer e
Open "xzxwz.zwz" For Input As #1
e = Err
Print e
Sleep
	
